Update leaf bucket parser
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>